// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IncomeField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          name="income"
          placeholder="Dochód"
          type="text"
          value="1234567890a"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podana kwota jest nieprawidłowa
      </span>
    </div>
  </form>
</div>
`;

exports[`<IncomeField/> matches snapshot 1`] = `
<input
  class="sc-fnVYJo csxChD"
  id="testId"
  name="income"
  placeholder="Dochód"
  type="text"
  value=""
/>
`;

exports[`<IncomeField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="income"
      >
        Income*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="Income"
          name="income"
          placeholder="Dochód*"
          required=""
          type="text"
          value=""
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<IncomeField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="income"
      >
        Income
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo csxChD"
          id="testId"
          label="Income"
          name="income"
          placeholder="Dochód"
          type="text"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
